fix(orate): docs fixes

--- a/content/docs/07-reference/01-ai-sdk-core/index.mdx
+++ b/content/docs/07-reference/01-ai-sdk-core/index.mdx
@@ -52,6 +52,11 @@ AI SDK Core contains the following main functions:
         'Generate images based on a given prompt using an image model.',
       href: '/docs/reference/ai-sdk-core/generate-image',
     },
+    {
+      title: 'generateTranscript()',
+      description: 'Generate a transcript from an audio file.',
+      href: '/docs/reference/ai-sdk-core/generate-transcript',
+    },
   ]}
 />
 
