--- a/content/docs/03-ai-sdk-core/index.mdx
+++ b/content/docs/03-ai-sdk-core/index.mdx
@@ -50,6 +50,11 @@ description: Learn about AI SDK Core.
       href: '/docs/ai-sdk-core/image-generation',
     },
     {
+      title: 'Transcription',
+      description: 'Learn how to transcribe audio with AI SDK Core.',
+      href: '/docs/ai-sdk-core/transcription',
+    },
+    {
       title: 'Provider Management',
       description: 'Learn how to work with multiple providers.',
       href: '/docs/ai-sdk-core/provider-management',
