Convert all props to camelcase

--- a/content/docs/03-ai-sdk-core/36-transcription.mdx
+++ b/content/docs/03-ai-sdk-core/36-transcription.mdx
@@ -49,7 +49,7 @@ const { transcript } = await generateTranscript({
   audio: audioData,
   providerOptions: {
     openai: {
-      timestamp_granularities: ['word'],
+      timestampGranularities: ['word'],
     },
   },
 });
