--- a/content/providers/01-ai-sdk-providers/02-openai.mdx
+++ b/content/providers/01-ai-sdk-providers/02-openai.mdx
@@ -854,8 +854,7 @@ The following provider options are available:
   Optional.
 
 - **include** _string[]_
-  Additional information to include in the transcription response. `logprobs` will return the log probabilities of the tokens in the response to understand the model's confidence in the transcription. `logprobs` only works with `response_format` set to `json` and only with the models `gpt-4o-transcribe` and `gpt-4o-mini-transcribe`.
-  Optional.
+  Additional information to include in the transcription response.
 
 ### Model Capabilities
 
