--- a/content/docs/07-reference/01-ai-sdk-core/index.mdx
+++ b/content/docs/07-reference/01-ai-sdk-core/index.mdx
@@ -53,9 +53,9 @@ AI SDK Core contains the following main functions:
       href: '/docs/reference/ai-sdk-core/generate-image',
     },
     {
-      title: 'generateTranscript()',
+      title: 'transcribe()',
       description: 'Generate a transcript from an audio file.',
-      href: '/docs/reference/ai-sdk-core/generate-transcript',
+      href: '/docs/reference/ai-sdk-core/transcribe',
     },
   ]}
 />
