--- a/content/providers/01-ai-sdk-providers/02-openai.mdx
+++ b/content/providers/01-ai-sdk-providers/02-openai.mdx
@@ -861,5 +861,5 @@ The following provider options are available:
 | Model                    | Transcription       | Duration            | Segments            | Language            |
 | ------------------------ | ------------------- | ------------------- | ------------------- | ------------------- |
 | `whisper-1`              | <Check size={18} /> | <Check size={18} /> | <Check size={18} /> | <Check size={18} /> |
-| `gpt-4o-mini-transcribe` | <Check size={18} /> |                     |                     |                     |
-| `gpt-4o-transcribe`      | <Check size={18} /> |                     |                     |                     |
+| `gpt-4o-mini-transcribe` | <Check size={18} /> | <Cross size={18} /> | <Cross size={18} /> | <Cross size={18} /> |
+| `gpt-4o-transcribe`      | <Check size={18} /> | <Cross size={18} /> | <Cross size={18} /> | <Cross size={18} /> |
