--- a/content/docs/03-ai-sdk-core/36-transcription.mdx
+++ b/content/docs/03-ai-sdk-core/36-transcription.mdx
@@ -10,7 +10,7 @@ description: Learn how to transcribe audio with the AI SDK.
 The AI SDK provides the [`transcibe`](/docs/reference/ai-sdk-core/transcribe)
 function to transcribe audio using a transcription model.
 
-```tsx
+```ts
 import { experimental_transcibe as transcibe } from 'ai';
 import { openai } from '@ai-sdk/openai';
 
@@ -20,11 +20,11 @@ const { transcript } = await transcibe({
 });
 ```
 
-The `audio` property is very flexible and can be a `Blob`, `File`, `Uint8Array`, `ArrayBuffer`, `Buffer`, `URL` or a string (e.g. a URL or base64 encoded data).
+The `audio` property can be a `Blob`, `File`, `Uint8Array`, `ArrayBuffer`, `Buffer`, `URL` or a string (e.g. a URL or base64 encoded data).
 
-As for the response, you can access the transcript data like so:
+To access the generated transcript:
 
-```tsx
+```ts
 const text = transcript.text; // transcript text e.g. "Hello, world!"
 const segments = transcript.segments; // array of segments with start and end times, if available
 const language = transcript.language; // language of the transcript if available e.g. "en"
@@ -33,14 +33,11 @@ const duration = transcript.duration; // duration of the transcript if available
 
 ## Settings
 
-### Provider-specific Settings
+### Provider-Specific settings
 
-Transcription models often have provider- or even model-specific settings.
-You can pass such settings to the `transcibe` function
-using the `providerOptions` parameter. The options for the provider
-(`openai` in the example below) become request body properties.
+Transcription models often have provider or model-specific settings which you can set using the `providerOptions` parameter. The options for the provider (`openai` in the example below) become request body properties.
 
-```tsx highlight={"9"}
+```ts highlight={"9"}
 import { experimental_transcibe as transcibe } from 'ai';
 import { openai } from '@ai-sdk/openai';
 
@@ -90,9 +87,9 @@ const { transcript } = await transcibe({
 
 ### Warnings
 
-If the model returns warnings, e.g. for unsupported parameters, they will be available in the `warnings` property of the response.
+Warnings (e.g. unsupported parameters) are available on the `warnings` property.
 
-```tsx
+```ts
 const { transcript, warnings } = await transcibe({
   model: openai.transcription('whisper-1'),
   audio: audioData,
@@ -103,18 +100,21 @@ const { transcript, warnings } = await transcibe({
 
 When `transcibe` cannot generate a valid transcript, it throws a [`AI_NoTranscriptGeneratedError`](/docs/reference/ai-sdk-errors/ai-no-transcript-generated-error).
 
-This error occurs when the AI provider fails to generate a transcript. It can arise due to the following reasons:
+This error can arise for any the following reasons:
 
 - The model failed to generate a response
 - The model generated a response that could not be parsed
 
 The error preserves the following information to help you log the issue:
 
-- `responses`: Metadata about the image model responses, including timestamp, model, and headers.
-- `cause`: The cause of the error. You can use this for more detailed error handling
+- `responses`: Metadata about the transcription model responses, including timestamp, model, and headers.
+- `cause`: The cause of the error. You can use this for more detailed error handling.
 
 ```ts
-import { transcibe, NoTranscriptGeneratedError } from 'ai';
+import {
+  experimental_transcibe as transcibe,
+  NoTranscriptGeneratedError,
+} from 'ai';
 
 try {
   await transcibe({ model, audio });
