--- a/content/docs/07-reference/01-ai-sdk-core/11-transcribe.mdx
+++ b/content/docs/07-reference/01-ai-sdk-core/11-transcribe.mdx
@@ -77,26 +77,26 @@ console.log(transcript);
     {
       name: 'text',
       type: 'string',
-      description: 'The text of the transcript.',
+      description: 'The complete transcribed text from the audio input.',
     },
     {
       name: 'segments',
-      type: 'Array<TranscriptSegment>',
-      description: 'The segments of the transcript.',
+      type: 'Array<{ text: string; startSecond: number; endSecond: number }>',
+      description: 'An array of transcript segments, each containing a portion of the transcribed text along with its start and end times in seconds.',
     },
     {
       name: 'language',
-      type: 'string | null',
-      description: 'The language of the transcript.',
+      type: 'string | undefined',
+      description: 'The language of the transcript in ISO-639-1 format e.g. "en" for English.',
     },
     {
-      name: 'duration',
-      type: 'number | null',
-      description: 'The duration of the transcript.',
+      name: 'durationInSeconds',
+      type: 'number | undefined',
+      description: 'The duration of the transcript in seconds.',
     },
     {
       name: 'warnings',
-      type: 'TranscriptionGenerationWarning[]',
+      type: 'TranscriptionWarning[]',
       description:
         'Warnings from the model provider (e.g. unsupported settings).',
     },
