--- a/content/docs/07-reference/01-ai-sdk-core/11-transcribe.mdx
+++ b/content/docs/07-reference/01-ai-sdk-core/11-transcribe.mdx
@@ -82,12 +82,14 @@ console.log(transcript);
     {
       name: 'segments',
       type: 'Array<{ text: string; startSecond: number; endSecond: number }>',
-      description: 'An array of transcript segments, each containing a portion of the transcribed text along with its start and end times in seconds.',
+      description:
+        'An array of transcript segments, each containing a portion of the transcribed text along with its start and end times in seconds.',
     },
     {
       name: 'language',
       type: 'string | undefined',
-      description: 'The language of the transcript in ISO-639-1 format e.g. "en" for English.',
+      description:
+        'The language of the transcript in ISO-639-1 format e.g. "en" for English.',
     },
     {
       name: 'durationInSeconds',
